package com.company.graphiceditor;

import javafx.application.Application;
import javafx.fxml.FXMLLoader;
import javafx.scene.Scene;
import javafx.scene.image.Image;
import javafx.scene.paint.Color;
import javafx.stage.Stage;

import java.io.IOException;


public class Main extends Application {
    @Override
    public void start(Stage stage) throws IOException {
        FXMLLoader fxmlLoader = new FXMLLoader(Main.class.getResource("task.fxml"));
        Scene scene = new Scene(fxmlLoader.load(), 600, 400, Color.LIGHTBLUE);
        stage.setTitle("Graphics Editor");
        stage.setResizable(false);
        try {
            Image icon = new Image(getClass().getResource("images/logo.png").toString());
            stage.getIcons().add(icon);
        } catch (IllegalArgumentException e) {
            e.printStackTrace();

        }
        stage.setScene(scene);
        stage.show();
    }

    public static void main(String[] args) {
        launch();
    }
}