package com.company.graphiceditor;

public interface Moveable {
    void moveLeft();

    void moveRight();

    void moveUp();

    void moveDown();
}
