package com.company.graphiceditor;

public interface Transformable {
    void shrinkDown();

    void expandUp();

    void shrinkLeft();

    void expandRight();
}
